--- a/masterserver/package.json
+++ b/masterserver/package.json
@@ -25,6 +25,7 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "ioredis": "^4.17.3",
+    "protobufjs": "^6.9.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5",
