ids can now be created

--- a/testclient/package.json
+++ b/testclient/package.json
@@ -16,7 +16,8 @@
     "debug": "^4.1.1",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "masterserver": "../masterserver"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
