--- a/testclient/package.json
+++ b/testclient/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/debug": "^4.1.5",
+    "@types/protobufjs": "^6.0.0",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "debug": "^4.1.1",
+    "masterserver": "../masterserver",
     "parcel-bundler": "^1.12.4",
+    "protobufjs": "^6.9.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "masterserver": "../masterserver"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
