--- a/masterserver/package.json
+++ b/masterserver/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsnd --respawn index.ts",
-    "proto": "pbjs -t static-module -w commonjs -o proto/index.js ./proto/msg.proto && pbts -o proto/index.d.ts proto/index.js"
+    "proto": "pbjs --force-number -t static-module -w commonjs -o proto/index.js ./proto/msg.proto && pbts -o proto/index.d.ts proto/index.js"
   },
   "repository": {
     "type": "git",
