--- a/masterserver/package.json
+++ b/masterserver/package.json
@@ -22,6 +22,7 @@
     "@types/debug": "^4.1.5",
     "@types/ioredis": "^4.16.5",
     "@types/redis": "^2.8.22",
+    "@types/uuidv4": "^5.0.0",
     "@types/ws": "^7.2.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
@@ -30,6 +31,7 @@
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5",
+    "uuid": "^8.1.0",
     "ws": "^7.3.0"
   }
 }
