--- a/samples/chat/package.json
+++ b/samples/chat/package.json
@@ -19,7 +19,8 @@
     "parcel-bundler": "^1.12.4",
     "protobufjs": "^6.9.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "masterclient": "file://../../masterclient"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
