--- a/masterserver/package.json
+++ b/masterserver/package.json
@@ -2,10 +2,12 @@
   "name": "masterserver",
   "version": "1.0.0",
   "description": "A nodejs implementation of a masterserver",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd --respawn index.ts"
+    "dev": "tsnd --respawn index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5",
     "uuid": "^8.1.0",
-    "ws": "^7.3.0"
+    "ws": "^7.3.0",
+    "shared": "file:../shared"
   }
 }
