--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,6 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag horup/masterserver:$(date +%s)
+      run: docker build . --file Dockerfile --tag horup/masterserver:latest
     - name: Push Docker Image
-      run: docker push horup/masterserver:$(date +%s)
+      run: docker push horup/masterserver:latest
