--- a/samples/chat/package.json
+++ b/samples/chat/package.json
@@ -20,7 +20,8 @@
     "protobufjs": "^6.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "masterclient": "file://../../masterclient"
+    "masterclient": "file://../../masterclient",
+    "shared": "file://../../shared"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
