--- a/masterclient/package.json
+++ b/masterclient/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "typescript": "^3.9.5",
-    "shared": "file:../shared"
+    "shared": "file://../shared"
   }
 }
