--- a/broker-client-lib/package.json
+++ b/broker-client-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "masterclient",
+  "name": "broker-client-lib",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
